<resources>
    <string name="app_name">Tubes2</string>
    <string name="title">Hello</string>
    <string name="name">Rephrain Archaimeric</string>
    <string name="fakultas">Fakultas</string>
    <string name="namafakultas">Teknik Informasi dan Sains</string>
    <string name="npm">NPM</string>
    <string name="tambah">+</string>
    <string name="programstudi">Program Studi</string>
    <string name="namaprogram">Informatika</string>
    <string name="announcement">\<u>Selengkapnya</u></string>
    <string name="appointment">Appointment</string>
    <string name="frs">FRS</string>
    <string name="exit">Exit</string>
    <string name="informatics_apps">Informatics Apps</string>
    <string name="please_login_first">Please login first!</string>
    <string name="email">Email : </string>
    <string name="email_hint">E.g. user@unpar.ac.id</string>
    <string name="password">Password : </string>
    <string name="password_hint">E.g. *********</string>
    <string name="forget_password">Forget Password?</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">&lt;</string>

    <string name="title_pertemuan">Pertemuan</string>

    <string name="title_add_pertemuan">Tambah Pertemuan</string>
    <string name="judul_pertemuan">Judul Pertemuan : </string>
    <string name="jadwal_pertemuan">Jadwal Pertemuan :</string>
    <string name="partisipan_pertemuan">Partisipan Pertemuan :</string>
    <string name="btn_jadwal_dosen">Lihat Jadwal Dosen</string>
    <string name="deskripsi_pertemuan">Deskripsi Pertemuan : </string>
    <string name="btn_simpan_pertemuan">Simpan Pertemuan</string>

    <string name="title_add_pengumuman">Tambah Pengumuman : </string>
    <string name="judul_pengumuman">Judul Pengumuman : </string>
    <string name="tag_pengumuman">Tag Pengumuman : </string>
    <string name="isi_pengumuman">Isi Pengumuman : </string>
    <string name="upload_pengumuman">Upload</string>

    <string name="title_jadwal_dosen">Jadwal Dosen</string>
    <string name="tv_nama_dosen">Nama Dosen</string>
    <string name="btn_jadwal_kembali">Kembali</string>
    <string name="tv_senin">Senin</string>
    <string name="tv_selasa">Selasa</string>
    <string name="tv_rabu">Rabu</string>
    <string name="tv_kamis">Kamis</string>
    <string name="tv_jumat">Jumat</string>
    <string name="welcome">Welcome : </string>
    <string name="student">Student</string>
    <string name="role">Role : </string>
    <string name="role_hint">E.g. admin</string>
    <string name="hint_judul_pertemuan">Masukan Judul Pertemuan</string>
    <string name="hint_partisipan_pert">Partisipan Pertemuan</string>
    <string name="btn_jadwal_dsn_text">Lihat Jadwal Dosen</string>
    <string name="hint_tanggal_pert">Tanggal Pertemuan</string>
    <string name="hint_waktu_pert">Waktu Pertemuan</string>
    <string name="hint_waktu_akhir">Waktu Akhir</string>
    <string name="desk_pert">Masukkan Deskripsi Pertemuan</string>

    <string name="hint_judul_pengumuman">Masukan Judul Pengumuman</string>
    <string name="hint_tag">Masukan Tag Pengumuman</string>
    <string name="hint_isi_pengumuman">Masukan Isi Pengumuman</string>
    <string name="hint_pilih_matkul">Pilih Mata Kuliah</string>
    <string name="submit_text">Submit</string>
    <string name="tanggal_list_pert">Tanggal : </string>
    <string name="matkul_text">Mata Kuliah : </string>
    <string name="semester_text">Semester : </string>
    <string name="pagefrs">FRS Mata Kuliah</string>
    <string name="pagesmst">Semester Tahun</string>
    <string name="pagepengumuman">Pengumuman</string>
    <string name="watermark">BY KELOMPOK 2A :)</string>

    <string name="prasyarat">Prasyarat : </string>
    <string name="title_add_matkul">Tambah FRS</string>
</resources>