<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:src="@drawable/iflogo"></ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="40sp"
        android:textColor="@color/darkgrey"
        android:textStyle="bold"
        android:layout_marginStart="30dp">
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_login_first"
        android:textColor="@color/darkgrey"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="17sp">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:paddingTop="28dp"
        android:background="@drawable/menu"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:elevation="25dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginStart="30dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>
        <EditText
            android:id="@+id/email"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:textColorHint="@color/lightgrey"
            android:hint="@string/email_hint"
            android:textSize="14sp"
            android:inputType="textEmailAddress">
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:textColorHint="@color/lightgrey"
            android:textSize="14sp"
            android:background="@color/white"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
            android:longClickable="false">
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>
        <EditText
            android:id="@+id/role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:textColorHint="@color/lightgrey"
            android:background="@color/white"
            android:hint="@string/role_hint"
            android:textSize="14sp"
            android:inputType="textEmailAddress">
        </EditText>
        <!--    <TextView-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="@string/forget_password"-->
        <!--        android:layout_gravity="right"-->
        <!--        android:layout_marginEnd="30dp"-->
        <!--        android:clickable="true"-->
        <!--        android:focusable="true"-->
        <!--        android:foreground="?attr/selectableItemBackground">-->
        <!--    </TextView>-->
        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_margin="30dp"
            android:layout_gravity="center"
            android:padding="14dp"
            android:textSize="19dp"
            android:backgroundTint="@color/darkgrey"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:background="@drawable/menu">
        </TextView>
    </LinearLayout>


<!--    <TextView-->
<!--        android:id="@+id/sign_up"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:text="@string/sign_up"-->
<!--        android:layout_margin="20dp"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:foreground="?attr/selectableItemBackground">-->
<!--    </TextView>-->
</LinearLayout>
