<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/title_jadwal_dosen"
            android:textSize="30dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_nama_dosen"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textSize="20sp"/>
        <Spinner
            android:id="@+id/et_addDoctor_specialist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:importantForAutofill="no"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_senin"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/input_jadwal_senin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="textEnd"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_selasa"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/input_jadwal_selasa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="textEnd"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_rabu"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/input_jadwal_rabu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="textEnd"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_kamis"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/input_jadwal_kamis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="textEnd"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_jumat"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/input_jadwal_jumat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="textEnd"
                android:layout_weight="1"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_jadwal_kembali"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black"/>

    </LinearLayout>
</ScrollView>