<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:padding="40dp"
        android:orientation="horizontal"
        android:elevation="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_weight="0.05">
        </TextView>
        <TextView
            android:id="@+id/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_weight="0.95"
            android:textStyle="bold">
        </TextView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_menu_24">
        </ImageView>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informatics_apps"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_margin="20dp">
    </TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:layout_margin="20dp"
                android:src="@drawable/ic_baseline_announcement_24"
                android:background="@drawable/menu"
                android:elevation="20dp">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:text="@string/announcement"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:layout_marginTop="20dp"
                android:layout_margin="20dp"
                android:src="@drawable/ic_baseline_fact_check_24"
                android:background="@drawable/menu"
                android:elevation="20dp">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="90dp"
                android:text="@string/frs"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:layout_margin="20dp"
                android:src="@drawable/ic_baseline_people_outline_24"
                android:background="@drawable/menu"
                android:elevation="20dp">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="60dp"
                android:text="@string/appointment"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:layout_marginTop="20dp"
                android:layout_margin="20dp"
                android:src="@drawable/ic_baseline_exit_to_app_24"
                android:background="@drawable/menu"
                android:elevation="20dp">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="90dp"
                android:text="@string/exit"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>